# Korelator

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  configuration.json  deny.toml  renovate.json
.github/workflows/: ci.yml
examples/: configuration_template.json
migrations/: 0001_create_alerts.sql
src/: alert.rs  configuration.rs  datasources.rs  errors.rs  evaluation_engine.rs  lib.rs  main.rs  store.rs
src/alert/: db.rs  sink.rs  tests.rs
src/alert/db/: reader.rs  writer.rs
src/alert/tests/: db.rs  sink.rs
src/datasources/: quickwit.rs  stdin.rs  tests.rs
src/datasources/tests/: fixtures.rs  quickwit.rs  stdin.rs
src/evaluation_engine/: condition.rs  filter.rs  rule.rs  tests.rs
src/evaluation_engine/tests/: condition.rs  filter.rs  rule.rs
src/store/: alert.rs
