[package]
name = "korelator"
version = "0.1.0"
edition = "2024"

description = "Corelator, trigger and alert sender"
license = "AGPL-3.0-or-later"
readme = "README.md"

repository = "https://github.com/komrad-company/"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2.0.18"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["migrate"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "io-std",
    "sync",
] }

khronika = { git = "https://github.com/komrad-company/Khronika.git", tag = "v0.1.0-rc1" }
kompiler = { git = "https://github.com/komrad-company/Kompiler.git", tag = "v0.1.0-rc2" }
konnect = { git = "https://github.com/komrad-company/Konnect.git", tag = "v0.1.0-rc1" }
kodeks = { git = "https://github.com/komrad-company/Kodeks.git", tag = "v0.1.0-rc2" }

[dev-dependencies]
mockito = "1"
